# bookclub

./: .gitignore  README.md
design_patterns_in_modern_cpp/chapter_7/: CMakeLists.txt
design_patterns_in_modern_cpp/chapter_7/include/: bridge.hpp
design_patterns_in_modern_cpp/chapter_7/src/: bridge.cpp  main.cpp
